kubernetes/infrastructure/prod/pocket-id/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: security
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_POCKETID}.${DOMAIN}"
    gethomepage.dev/description: "Passkey OIDC Identity Provider"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: sh-pocket-id
    gethomepage.dev/app: pocket-id
    gethomepage.dev/name: "Pocket ID"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: pocket-id.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`${HOST_POCKETID}.${DOMAIN}`)
      middlewares:
        - name: security-header
          namespace: traefik
      services:
        - name: pocket-id
          kind: Service
          namespace: security
          port: 1411
